...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@android:color/holo_blue_light"
    tools:context="com.example.fourinarow.FourInARowActivity">

    <TextView
        android:id="@+id/Label_ScoreUser_1"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Label_ScoreUser_2"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Button_Start"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="Start"
        app:layout_constraintBottom_toTopOf="@+id/GridLayout_Grid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <GridLayout
        android:id="@+id/GridLayout_Grid"
...
        android:columnCount="7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/ImageView_5_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_vertical"
            android:background="@drawable/circle"
            android:gravity="center"
            android:scaleType="centerCrop"
            android:clickable="true" />


        <ImageView
            android:id="@+id/ImageView_5_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_vertical"
            android:background="@drawable/circle"
            android:gravity="center"
...
            android:layout_gravity="fill_vertical"
            android:background="@drawable/circle"
            android:gravity="center"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/ImageView_2_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_vertical"
            android:background="@drawable/circle"
            android:gravity="center"
...
            android:layout_gravity="fill_vertical"
            android:background="@drawable/circle"
            android:gravity="center"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/ImageView_0_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_vertical"
            android:background="@drawable/circle"
            android:gravity="center"
...
