<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tic_tac_toe.TicTacToeSettings">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="311dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_return"
                android:layout_width="50dp"
                android:layout_height="100dp"
                android:layout_gravity="right|top"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:text="X"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/lbl_fix_words"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="Fix words: "
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="397dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_varying_words"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Your words"
                android:text=""
                android:textSize="20dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_weight="1"
        android:orientation="vertical">


        <EditText
            android:id="@+id/txtInput"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:ems="10"
            android:hint="Type in your word"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_delete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:text="Delete Word"
                    android:textSize="15dp" />

                <Button
                    android:id="@+id/btn_add"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:text="Add word"
                    android:textSize="15dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>